2003/12/04 niteria
- Implemented Feature 852581: TemplateDialogs: Remember last opened tab
- Fixed bug 852582: TemplateDialogs: Tabs are not ordered alphabetically
- Set version info to 1 Beta 6.20

2003/11/15 niteria
- Fixed Bug 842720: Parsing file names with points like "1.1"
   TXC reproduces now exactly the behaviour of TeX
   regarding \input and \include
- Fixed Bug 601207: Tooltip Text of 'Select Window'-Button is missing

2003/09/13 niteria
- Implemented Feature 777489: More User Tools Icons
- Fixed Bug 805454: Single File Compiling fails if project is loaded

2003/08/11 niteria
- Updated the URL for downloading dictionaries.
   Points now to: http://lingucomponent.openoffice.org/download_dictionary.html

2003/07/24 niteria
- Implemented Feature 776912: Parse for even unknown environments

2003/07/18 titoo
- Implemented Feature 567832: Equations in Structure/Object View

2003/07/15 niteria
- Fixed Bug 702814: TXC doesn't save last opened folder after cancelling

2003/06/13 niteria
- Implemented Feature 753658: Scan for Project on Opening a Document
   (Still open question: Ability to switch this off in the options?)
- Implemented Feature 748870: Insert graphics dialogue file type filter too limited
   (Added *.jpg, *.jpeg and *.png)

2003/06/05 niteria
- Implemented Feature 675205: One-Click Project Creation for existing Documents
- Implemented Feature 588960: Disable build for unsaved files
   (==> Prompts the user to save the file instead of disabling the command)
- Fixed Bug 592338: Ghost File when cancelling "New Project"

2003/04/30 christianwelzel
- Fixed Bug 602329: File>Print and HP LaserJet 4050.

2003/03/13 christianwelzel
- Implemented Feature 614342: Last opened folder.
- Fixed Feature 535144: Specifying Output Profile in TeX file.

2003/03/08 niteria
- Fixed Bug 700129: cosh instead of \cosh
- Fixed Bug 699688: "Save As"-Dialog with wrong InitDir.

2003/03/04 christianwelzel
- Implemented Feature 551294: Storing MRU Profile with Project.